fix: layout issue of footer and name of club

--- a/styles.css
+++ b/styles.css
@@ -743,7 +743,7 @@ footer{
   justify-content: center;
   background-color: var(--red);
   width: 100%;
-  height: 5rem;
+  height: 7rem;
 }
 
 footer p{
@@ -751,7 +751,8 @@ footer p{
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+  margin-left: 100px;
+  color: #fbecc9;
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
 }
@@ -761,14 +762,13 @@ footer p{
   display: flex;
   align-items: center;
   justify-content: center;
-
+  gap: 20px;
 }
 
 .footer-social img {
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  gap: 3px;
   object-fit: cover;
   border: 2px solid rgb(27, 82, 29);
   transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -776,4 +776,9 @@ footer p{
   z-index: 3;
   background: none;
   border: none;
+}
+
+.footer-social img:hover {
+  transform: scale(1.1);
+  box-shadow: 0 0 30px rgb(255, 240, 152);
 }
